--- a/examples/train_qlora/llama3_lora_sft_bnb_npu.yaml
+++ b/examples/train_qlora/llama3_lora_sft_bnb_npu.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: meta-llama/Meta-Llama-3-8B-Instruct
+model_name_or_path: Qwen/Qwen2.5-7B-Instruct
 quantization_bit: 4
 quantization_method: bitsandbytes
 double_quantization: false
@@ -13,15 +13,15 @@ lora_rank: 8
 lora_target: all
 
 ### dataset
-dataset: identity,alpaca_en_demo
-template: llama3
-cutoff_len: 2048
+dataset: sfzy_sharegpt_data
+template: qwen
+cutoff_len: 8172
 max_samples: 1000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/llama3-8b/lora/sft
+output_dir: saves/qwen-7b/lora/sft
 logging_steps: 10
 save_steps: 500
 plot_loss: true
